# coursework

./: CMakeLists.txt  README.md  lg.txt  log.txt  main.c  output  output.mtf  output.txt  script.bat  tmp
headers/: archive.c  archive.h  basic_structures.c  basic_structures.h  compress.c  compress.h  message.c  message.h
temp/: result.txt  temp.txt
